Fixing swagger context path change requested by Carlos. Added new validations like no git repo found. Fixed https://github.com/swagger-api/swagger-ui/issues/2760 by adding host property to swagger.yaml
